@@ -1,3 +1,6 @@
+  * Work around changes in composition_class_role in Moose >= 0.93_01
+    to be compatible with both old and new Moose versions.
+
 0.04  Mon, 04 Jan 2010 18:40:11 +0100
   * Depend on Test::More 0.88 for done_testing.
 
